flask_output.log
  File "/home/said/Escritorio/driver-bloqueo-digital-huella-main/app.py", line 68
    err = self.sgfp.Create()
    ^^^
SyntaxError: expected 'except' or 'finally' block
